# legend-dad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GitVersion.yml  Taskfile.yml  cliff.toml  pyproject.toml
.agent/skills/: INDEX.md
.archon/: config.yaml
.archon/workflows/: legend-dad-bugfix.yaml  legend-dad-feature.yaml  legend-dad-release-validate.yaml
.claude/: settings.json
infra/: .env.example
project/articy/: import-manifest.json
project/comfyui/: README.md
project/ldtk/: legend-dad.ldtk
project/server/: biome.json  package.json  pnpm-lock.yaml
scripts/: build_all_bundles.py  content_manifest.py  download_templates.py  ldtk_sync.py  ldtk_vocabulary.py  pck_manifest.py  precommit_shared_guard.py  run_godot_checked.py  serve_web.js  setup_shared_links.py  sync_claude_skills.py  tile_classifier.py  tileset_preprocess.py  vault_to_manifest.py  writeback_articy_ids.py  zone_layout_render.py
scripts/adapters/: canonical_to_godot.py
tests/: conftest.py  test_canonical_to_godot.py  test_content_manifest.py  test_ldtk_sync.py  test_ldtk_vocabulary.py  test_manifest_diffing.py  test_pck_manifest.py  test_precommit_shared_guard.py  test_setup_shared_links.py  test_tileset_preprocess.py  test_vault_to_manifest.py  test_writeback_articy_ids.py  test_zone_layout_render.py
vault/architecture/: 2026-04-13-archon-hermes-operating-model.md
vault/design/: combat-system-design.md  dual-timeline-gameplay-brainstorm.md
vault/dev-log/: 2026-04-12-articy-pipeline-phase1.md  2026-04-12-dual-timeline-prototype.md  (+39 more)
(+549 files in other folders)
