[project]
name = "legend-dad"
version = "0.0.1"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
